Fixed: Personal link spacing, removed sidebar toggle bgcolor

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -91,7 +91,6 @@ body, html {
   width: $baseline-height * 3;
   height: $baseline-height * 3;
   padding-top: $padding / 2;
-  background: transparentize($white, 0.3);
 }
 .sidebar__toggle span {
   display: block;
@@ -269,7 +268,6 @@ body, html {
   flex-direction: column;
   text-align: center;
   flex: 1 1 30%;
-  background: $alpha-red;
   color: $primary-text-color;
 }
 .links__icon {
@@ -277,7 +275,10 @@ body, html {
 }
 .links__label {
   margin: 0;
+  text-transform: uppercase;
+  font-weight: 400;
 }
 .links__desc {
   margin-top: $margin/4;
+  color: $subtle-text-color;
 }
