--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -24,8 +24,7 @@ body, html {
 }
 .sidebar {
   background-color: $white;
-  border-right: 1px solid $grey;
-  // @include box-shadow(30px, 0, 15px, transparentize(black, 0.8));
+  @include box-shadow(1px, 0, 1px, transparentize($black, 0.9));
 
 }
 .logo--personal--med path {
